[package]
name = "thenewboston-rust"
version = "0.1.0"
authors = ["= <=>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
log = "0.4"
futures = "0.3"
tokio-compat-02 = "0.1.2"